[metadata]
name = gym-snake
version = 0.0.2
author = -
author_email = -
description = Snake Gym environment
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tigxy/Gym-Snake
project_urls =
    Bug Tracker = https://github.com/tigxy/Gym-Snake/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src